2005-10-23  Frederic Ruaudel <grumz@grumz.net> 

	* libnautilus-actions/nautilus-actions-config.c: Set empty
basename and scheme list valid if empty.

	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c: Add a preview icon toward the icon 
combobox in nact edit dialog.

	* nact/nact-editor.c: Implement Add/Remove/Edit of schemes
in nact list view.

	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c: Put back the tooltip in the edit
dialog of nact and add add/remove button to manage scheme list.

	* nact/nact-editor.c: Finnish implementing the scheme list
(save in gconf and prefs) and fix some compilation warnings.

2005-10-22  Frederic Ruaudel <grumz@grumz.net> 

	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c: Start implementing the scheme list 
in the edit dialog of nact.

	* nact/nact-editor.c: Fix the add/edit dialog title in 
relation with the task done.

	* nact/nact-editor.c:
	* nact/nact-utils.h:
	* nact/nautilus-actions-config.glade:
	* nact/nact.c: Implement the preference API and manage the 
filechooser dialog for the selection of the icon and command path.

	* libnautilus-actions/nautilus-actions-config-gconf-private.h:
	* configure.in: Add a global variable to define the GConf
basedir of n-a.

	* nact/Makefile.am:
	* nact/nact-prefs.c:
	* nact/nact-prefs.h: Add GConf managed preferences in nact

	* nact/nact.c: Fix the segfault when trying to edit/delete
an existing config.

	* nact/nact-editor.c: Fix access to the menu icon entry
when saving the dialog content.

	* utils/nautilus-actions-tools-utils.c:
	* utils/nautilus-actions-tools-utils.h:
	* configure.in:
	* utils/Makefile.am:
	* utils/nautilus-actions-convert.c:
	* utils/nautilus-actions-new-config.c: Fix some
compatibility problem with glib < 2.8. g_file_set_contents() wasn't
recognized.

2005-10-21  Frederic Ruaudel <grumz@grumz.net> 

	* nact/nact.c: Fix the display of the existing config in nact's
main dialog by using uuid instead of label as index.
