@@ -1,5 +1,8 @@
 2005-10-23  Frederic Ruaudel <grumz@grumz.net> 
 
+	* nact/nact-editor.c: Fix init of scheme list when add a
+new action.
+
 	* libnautilus-actions/nautilus-actions-config.c: Set empty
 basename and scheme list valid if empty.
 
